--- a/output/archives.html
+++ b/output/archives.html
@@ -44,6 +44,9 @@
     <dt>Tuesday 11 January 2011</dt>
     <dd><a href="tdd-django-south.html">Test-Driven Development with Django & South</a></dd>
 
+    <dt>Saturday 07 April 2012</dt>
+    <dd><a href="starting-over.html">Starting Over</a></dd>
+
 </dl>
 </section>
 
