--- a/output/pages/about-me.html
+++ b/output/pages/about-me.html
@@ -48,17 +48,26 @@
 <li><a href="http://connectedministries.org.uk" title="A network of Churches in Bradford">A</a>
    <a href="http://trinitychurchbradford.org.uk" title="Trinity Church, based in Bradford">few</a>
    <a href="http://moorsidechurch.org.uk" title="Moorside Church, based in Bradford">other</a>
-   <a href="http://hadathbaptistchurch.org" title="Hadath Baptist Church, based in Lebanon">sites</a>, also built with Kal&#233;o.</li>
+   <a href="http://hadathbaptistchurch.org" title="Hadath Baptist Church, based in Lebanon">sites</a>, also built with Kal&#233;o<sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>;</li>
 <li><a href="http://www.paulbeasleymurray.com" title="My minister's site">paulbeasleymurray.com</a>: my minister's personal site, containing
-   resources for ministers, including sermon transcripts, articles and a blog.</li>
+   resources for ministers, including sermon transcripts, articles and a blog;</li>
 <li><a href="http://www.ministrytoday.org.uk" title="A journal for those in Christian leadership, chaired by my minister">ministrytoday.org.uk</a>: a journal for those in Christian leadership,
    built using my open-source projects <a href="https://github.com/dominicrodger/django-magazine" title="A system for managing magazines">django-magazine</a> and
-   <a href="https://github.com/dominicrodger/django-board" title="A system for managing profile pages for boards of organisations">django-board</a>.</li>
+   <a href="https://github.com/dominicrodger/django-board" title="A system for managing profile pages for boards of organisations">django-board</a>;</li>
 <li><a href="http://aarongriffin.co.uk" title="My brother-in-law's site - a photography portfolio">aarongriffin.co.uk</a>: A photography site for my brother-in-law.</li>
 </ul>
 <p>This blog is written with <a href="http://pelican.notmyidea.org/en/2.8/index.html">Pelican</a>.</p>
 <p>The code (and all blog posts) are available on <a href="https://github.com/dominicrodger/dominicrodger.com">GitHub</a>,
 and the site is hosted by <a href="http://www.webfaction.com?affiliate=dominicrodger">WebFaction</a>.</p>
+<div class="footnote">
+<hr />
+<ol>
+<li id="fn:1">
+<p>These sites aren't directly run by me - I just look after the software
+  and the servers.&#160;<a href="#fnref:1" rev="footnote" title="Jump back to footnote 1 in the text">&#8617;</a></p>
+</li>
+</ol>
+</div>
 </section>
 
         <section id="extras" class="body">
