Adding link titles for all the links on the about-me page.

--- a/output/pages/about-me.html
+++ b/output/pages/about-me.html
@@ -56,9 +56,9 @@
    <a href="https://github.com/dominicrodger/django-board" title="A system for managing profile pages for boards of organisations">django-board</a>;</li>
 <li><a href="http://aarongriffin.co.uk" title="My brother-in-law's site - a photography portfolio">aarongriffin.co.uk</a>: A photography site for my brother-in-law.</li>
 </ul>
-<p>This blog is written with <a href="http://pelican.notmyidea.org/en/2.8/index.html">Pelican</a>.</p>
-<p>The code (and all blog posts) are available on <a href="https://github.com/dominicrodger/dominicrodger.com">GitHub</a>,
-and the site is hosted by <a href="http://www.webfaction.com?affiliate=dominicrodger">WebFaction</a>.</p>
+<p>This blog is written with <a href="http://pelican.readthedocs.org/en/latest/" title="Find out about Pelican">Pelican</a>.</p>
+<p>The code (and all blog posts) are available on <a href="https://github.com/dominicrodger/dominicrodger.com" title="Use the source, Luke!">GitHub</a>,
+and the site is hosted by <a href="http://www.webfaction.com?affiliate=dominicrodger" title="Get hosting from WebFaction">WebFaction</a>.</p>
 <div class="footnote">
 <hr />
 <ol>
