Adding "Pelican", a post about how I got started with Pelican.

--- a/output/archives.html
+++ b/output/archives.html
@@ -45,6 +45,9 @@
     <dd><a href="tdd-django-south.html">Test-Driven Development with Django & South</a></dd>
 
     <dt>Saturday 07 April 2012</dt>
+    <dd><a href="pelican.html">Starting with Pelican</a></dd>
+
+    <dt>Saturday 07 April 2012</dt>
     <dd><a href="starting-over.html">Starting Over</a></dd>
 
 </dl>
