Including an explanation of what Kaleo is.

--- a/output/pages/about-me.html
+++ b/output/pages/about-me.html
@@ -44,11 +44,11 @@
 <ul>
 <li><a href="http://dominicrodger.com" title="My personal blog">This site</a>: my personal blog, where I write about code;</li>
 <li><a href="http://www.centralbaptistchelmsford.org" title="My Church - Central Baptist in the great city of Chelmsford">centralbaptistchelmsford.org</a>: my Church's website, built with
-   Kal&#233;o.</li>
+   Kal&#233;o<sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>.</li>
 <li><a href="http://connectedministries.org.uk" title="A network of Churches in Bradford">A</a>
    <a href="http://trinitychurchbradford.org.uk" title="Trinity Church, based in Bradford">few</a>
    <a href="http://moorsidechurch.org.uk" title="Moorside Church, based in Bradford">other</a>
-   <a href="http://hadathbaptistchurch.org" title="Hadath Baptist Church, based in Lebanon">sites</a>, also built with Kal&#233;o<sup id="fnref:1"><a href="#fn:1" rel="footnote">1</a></sup>;</li>
+   <a href="http://hadathbaptistchurch.org" title="Hadath Baptist Church, based in Lebanon">sites</a>, also built with Kal&#233;o<sup id="fnref:2"><a href="#fn:2" rel="footnote">2</a></sup>;</li>
 <li><a href="http://www.paulbeasleymurray.com" title="My minister's site">paulbeasleymurray.com</a>: my minister's personal site, containing
    resources for ministers, including sermon transcripts, articles and a blog;</li>
 <li><a href="http://www.ministrytoday.org.uk" title="A journal for those in Christian leadership, chaired by my minister">ministrytoday.org.uk</a>: a journal for those in Christian leadership,
@@ -63,8 +63,13 @@ and the site is hosted by <a href="http://www.webfaction.com?affiliate=dominicro
 <hr />
 <ol>
 <li id="fn:1">
+<p>Kal&#233;o is a Django application which I've written for managing
+  websites for Churches. It is currently closed-source, though I'd
+  eventually like to change that (see <a href="http://www.dominicrodger.com/starting-over.html">Starting Over</a>)&#160;<a href="#fnref:1" rev="footnote" title="Jump back to footnote 1 in the text">&#8617;</a></p>
+</li>
+<li id="fn:2">
 <p>These sites aren't directly run by me - I just look after the software
-  and the servers.&#160;<a href="#fnref:1" rev="footnote" title="Jump back to footnote 1 in the text">&#8617;</a></p>
+  and the servers.&#160;<a href="#fnref:2" rev="footnote" title="Jump back to footnote 2 in the text">&#8617;</a></p>
 </li>
 </ol>
 </div>
