--- a/output/starting-over.html
+++ b/output/starting-over.html
@@ -91,10 +91,10 @@ headache every time I want to make a significant change (e.g. switching
 from Python 2.6 to Python 2.7, as I did recently).</p>
 <p>This maintenance headache makes me want to just throw it all away and start
 again. I'd make it leaner - Kal&#233;o's full of cruft that seemed like a good
-idea at the time. I'd use sites, so I could more easily manage upgrades, and
-be able to spin up new sites quicker. I'd probably separate out parts of it
-into apps, so other people could use just the parts of it they need. I'd write
-better tests.</p>
+idea at the time. I'd use the sites framework, so I could more easily manage
+upgrades, and be able to spin up new sites quicker. I'd probably separate out
+parts of it into apps, so other people could use just the parts of it they
+need. I'd write better tests.</p>
 <h1>Why I don't</h1>
 <p>But then I remember that most of this code just works, and there's a better way
 to do it. I can add tests for what I've already got. I can gradually pull apart
