Switching to reference style links, rather than in text to allow me to use link titles.

--- a/output/index.html
+++ b/output/index.html
@@ -184,7 +184,7 @@ need to make a change ...</p>
 
 
 </footer><!-- /.post-info -->
-                <p>I'd basically given up on attempting test-driven with Django, given the project I'm currently working on uses models with a lot of <a href="http://south.aeracode.org">South</a> migrations. Just building the database and running the migrations could take a minute or so when running <code>manage.py test</code>, and resetting the database to ...</p>
+                <p>I'd basically given up on attempting test-driven with Django, given the project I'm currently working on uses models with a lot of <a href="http://south.aeracode.org" title="Find out about South, a tool for managing database migrations in Django.">South</a> migrations. Just building the database and running the migrations could take a minute or so when running <code>manage.py test</code>, and resetting the database to ...</p>
                 <a class="readmore" href="./tdd-django-south.html">read more</a>
                 
                 </div><!-- /.entry-content -->
