--- a/output/tdd-django-south.html
+++ b/output/tdd-django-south.html
@@ -58,11 +58,22 @@
 
 
 </footer><!-- /.post-info -->
-        <p>I'd basically given up on attempting test-driven with Django, given the project I'm currently working on uses models with a lot of <a href="http://south.aeracode.org" title="Find out about South, a tool for managing database migrations in Django.">South</a> migrations. Just building the database and running the migrations could take a minute or so when running <code>manage.py test</code>, and resetting the database to a clean state meant the test suite would take several minutes to run.</p>
-<p>I've had an idea in the back of my mind for a while, and today I finally got around to making it work.</p>
+        <p>I'd basically given up on attempting test-driven with Django, given
+the project I'm currently working on uses models with a lot of
+<a href="http://south.aeracode.org" title="Find out about South, a tool for managing database migrations in Django.">South</a> migrations. Just building the database and running the
+migrations could take a minute or so when running <code>manage.py test</code>,
+and resetting the database to a clean state meant the test suite would
+take several minutes to run.</p>
+<p>I've had an idea in the back of my mind for a while, and today I
+finally got around to making it work.</p>
 <h1>SQLite</h1>
-<p>When using SQLite, the test runner doesn't bother to actually hit the filesystem, it <a href="http://docs.djangoproject.com/en/1.2/topics/testing/#the-test-database" title="Read the section of the Django docs about using SQLite's in memory model">just does the whole thing in memory</a>, which is a good deal quicker. Previously, I couldn't use SQLite, because South doesn't like it (since SQLite doesn't support <code>ALTER TABLE</code>).</p>
-<p>My realisation was that if I turned off South, I could use SQLite, which I did with this rather hackish file called <code>test_settings.py</code>:</p>
+<p>When using SQLite, the test runner doesn't bother to actually hit the
+filesystem, it
+<a href="http://docs.djangoproject.com/en/1.2/topics/testing/#the-test-database" title="Read the section of the Django docs about using SQLite's in memory model">just does the whole thing in memory</a>, which is a
+good deal quicker. Previously, I couldn't use SQLite, because South
+doesn't like it (since SQLite doesn't support <code>ALTER TABLE</code>).</p>
+<p>My realisation was that if I turned off South, I could use SQLite,
+which I did with this rather hackish file called <code>test_settings.py</code>:</p>
 <div class="codehilite"><pre><span class="kn">from</span> <span class="nn">settings</span> <span class="kn">import</span> <span class="o">*</span>
 
 <span class="n">INSTALLED_APPS</span> <span class="o">=</span> <span class="p">[</span><span class="n">app</span> <span class="k">for</span> <span class="n">app</span> <span class="ow">in</span> <span class="n">INSTALLED_APPS</span> <span class="k">if</span> <span class="n">app</span> <span class="o">!=</span> <span class="s">&#39;south&#39;</span><span class="p">]</span>
@@ -81,12 +92,16 @@
 </pre></div>
 
 
-<p>Obviously, this doesn't run through my South migrations, which I probably should do from time to time (especially when adding new migrations). I can still test those with:</p>
+<p>Obviously, this doesn't run through my South migrations, which I
+probably should do from time to time (especially when adding new
+migrations). I can still test those with:</p>
 <div class="codehilite"><pre>manage.py <span class="nb">test</span>
 </pre></div>
 
 
-<p>since by default the test runner will hit my normal settings module, which still has South in <code>INSTALLED_APPS</code>, and which hits my MySQL database.</p>
+<p>since by default the test runner will hit my normal settings module,
+which still has South in <code>INSTALLED_APPS</code>, and which hits my MySQL
+database.</p>
 <h1>The Results</h1>
 <p>With my <code>test_settings</code>, I get the following output:</p>
 <blockquote>
@@ -96,8 +111,11 @@
 <blockquote>
 <p>Ran 121 tests in 326.742s</p>
 </blockquote>
-<p>If I run tests for a particular app (which is generally all I need to do), that difference is 0.312s to 31.064s.</p>
-<p>That makes my test run approximately <strong>99% quicker</strong>, and well within what I consider an acceptable time to run every time I make small changes to my code.</p>
+<p>If I run tests for a particular app (which is generally all I need to
+do), that difference is 0.312s to 31.064s.</p>
+<p>That makes my test run approximately <strong>99% quicker</strong>, and well within
+what I consider an acceptable time to run every time I make small
+changes to my code.</p>
         </div><!-- /.entry-content -->
         
 
