--- a/output/pelican.html
+++ b/output/pelican.html
@@ -21,6 +21,12 @@
 
 <body id="index" class="home">
 
+<a href="https://github.com/dominicrodger/dominicrodger.com">
+
+<img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" />
+
+</a>
+
         <header id="banner" class="body">
                 <h1><a href=".">dominicrodger.com </a></h1>
                 <nav><ul>
