Adding an article on Better Testing.

--- a/output/archives.html
+++ b/output/archives.html
@@ -56,6 +56,9 @@
     <dt>Saturday 07 April 2012</dt>
     <dd><a href="pelican.html">Starting with Pelican</a></dd>
 
+    <dt>Thursday 12 April 2012</dt>
+    <dd><a href="better-testing.html">Getting Better at Testing</a></dd>
+
 </dl>
 </section>
 
