--- a/output/archives.html
+++ b/output/archives.html
@@ -51,6 +51,9 @@
     <dd><a href="tdd-django-south.html">Test-Driven Development with Django & South</a></dd>
 
     <dt>Saturday 07 April 2012</dt>
+    <dd><a href="nothing.html">I Know Nothing</a></dd>
+
+    <dt>Saturday 07 April 2012</dt>
     <dd><a href="starting-over.html">Starting Over</a></dd>
 
     <dt>Saturday 07 April 2012</dt>
