Adding "Travis, You Are Awesome".

--- a/output/archives.html
+++ b/output/archives.html
@@ -62,6 +62,9 @@
     <dt>Friday 20 April 2012</dt>
     <dd><a href="nothing.html">I Know Nothing</a></dd>
 
+    <dt>Sunday 29 April 2012</dt>
+    <dd><a href="build-breaking.html">Travis, You Are Awesome</a></dd>
+
 </dl>
 </section>
 
