--- a/output/archives.html
+++ b/output/archives.html
@@ -65,6 +65,9 @@
     <dt>Sunday 29 April 2012</dt>
     <dd><a href="build-breaking.html">Travis, You Are Awesome</a></dd>
 
+    <dt>Thursday 10 May 2012</dt>
+    <dd><a href="faster-django-tests.html">Faster Django Tests</a></dd>
+
 </dl>
 </section>
 
