Adding information about Kanisa to the about me page.

--- a/output/pages/about-me.html
+++ b/output/pages/about-me.html
@@ -65,17 +65,30 @@
 <p>This blog is written with <a href="http://pelican.readthedocs.org/en/latest/" title="Find out about Pelican">Pelican</a>.</p>
 <p>The code (and all blog posts) are available on <a href="https://github.com/dominicrodger/dominicrodger.com" title="Use the source, Luke!">GitHub</a>,
 and the site is hosted by <a href="http://www.webfaction.com?affiliate=dominicrodger" title="Get hosting from WebFaction">WebFaction</a>.</p>
+<h2>Kanisa</h2>
+<p>My current major project (as of June 2012) is <a href="https://github.com/dominicrodger/kanisa" title="View Kanisa on GitHub">Kanisa</a>, a system for
+managing Church websites. I've somewhat stalled on developing Kal&#233;o, for
+2 reasons:</p>
+<ol>
+<li>It was the first Django project I ever started, so there's a lot of built up
+   technical debt.</li>
+<li>It was my first attempt at a system for managing Church websites, so there's
+   a lot of things I didn't anticipate that I now need, and a lot of things I
+   thought I'd need that it turned out I didn't.</li>
+</ol>
+<p>I am looking forward to the pain of the <a href="http://en.wikipedia.org/wiki/Second-system_effect" title="Read about 'the tendency of small, elegant, and successful systems to have elephantine, feature-laden monstrosities as their successors' on Wikipedia">Second-system effect</a>.</p>
 <div class="footnote">
 <hr />
 <ol>
 <li id="fn:1">
-<p>Kal&#233;o is a Django application which I've written for managing
-  websites for Churches. It is currently closed-source, though I'd
-  eventually like to change that (see <a href="http://www.dominicrodger.com/starting-over.html">Starting Over</a>)&#160;<a href="#fnref:1" rev="footnote" title="Jump back to footnote 1 in the text">&#8617;</a></p>
+<p>Kal&#233;o is a Django application which I've written for
+  managing websites for Churches. It is currently closed-source,
+  and I'm hoping to replace it with Kanisa (despite what I said in
+  <a href="http://www.dominicrodger.com/starting-over.html">Starting Over</a>).&#160;<a href="#fnref:1" rev="footnote" title="Jump back to footnote 1 in the text">&#8617;</a></p>
 </li>
 <li id="fn:2">
-<p>These sites aren't directly run by me - I just look after the software
-  and the servers.&#160;<a href="#fnref:2" rev="footnote" title="Jump back to footnote 2 in the text">&#8617;</a></p>
+<p>These sites aren't directly run by me - I just look after the
+  software and the servers.&#160;<a href="#fnref:2" rev="footnote" title="Jump back to footnote 2 in the text">&#8617;</a></p>
 </li>
 </ol>
 </div>
