Adding a new post - "Avoiding database queries with Haystack".

--- a/output/archives.html
+++ b/output/archives.html
@@ -68,6 +68,9 @@
     <dt>Sunday 10 June 2012</dt>
     <dd><a href="faster-django-tests.html">Faster Django Tests</a></dd>
 
+    <dt>Thursday 05 July 2012</dt>
+    <dd><a href="order-n-haystack.html">Avoiding database queries with Haystack</a></dd>
+
 </dl>
 </section>
 
