Adding a post about my move to Ubunbtu on my netbook.

--- a/output/archives.html
+++ b/output/archives.html
@@ -71,6 +71,9 @@
     <dt>Thursday 05 July 2012</dt>
     <dd><a href="order-n-haystack.html">Avoiding database queries with Haystack</a></dd>
 
+    <dt>Monday 09 July 2012</dt>
+    <dd><a href="ubuntu-netbook.html">Moving to Ubuntu for mobile development</a></dd>
+
 </dl>
 </section>
 
