Adding "Forays into Responsive Design".

--- a/output/archives.html
+++ b/output/archives.html
@@ -74,6 +74,9 @@
     <dt>Monday 09 July 2012</dt>
     <dd><a href="ubuntu-netbook.html">Moving to Ubuntu for mobile development</a></dd>
 
+    <dt>Wednesday 26 December 2012</dt>
+    <dd><a href="responsive-beginnings.html">Forays into Responsive Design</a></dd>
+
 </dl>
 </section>
 
